# pyqt-settings

./: .pre-commit-config.yaml  Makefile  pyproject.toml  readme.md  setup.py
lib/pyqt_settings/: __init__.py  action.py  dialog.py  display_widget_action.py  geometry_test.py  setting_creator.py  test.py
lib/pyqt_settings/factory/: base.py  config_fun.py  control.py  init_fun.py
lib/pyqt_settings/field/: base.py  boolean.py  bytes.py  control.py  integer.py  json.py  list.py  path.py  raw.py  simple.py  string.py
lib/pyqt_settings/gui_widget/: base.py  check_box.py  combo_box.py  file_dialog.py  line_edit.py  list_line_edit.py  path_line_edit.py  simple.py  spin_box.py
lib/pyqt_settings/metaclass/: base.py  geometry_saver.py  qt_abc.py
lib/pyqt_settings/tests/: geometry_test.py  setting_test.py
lib/pyqt_settings/ui/: path_widget_ui.py  resources_rc.py  ui_path_widget.py
lib/pyqt_settings/util/: geometry_saver_meta.py  setting_wrapper.py
lib/pyqt_settings/widgets/: space_line_edit.py
src/: resources.qrc
src/pyqt_settings/: __init__.py  action.py  dialog.py
src/pyqt_settings/factory/: base.py  control.py
src/pyqt_settings/field/: base.py  control.py  json_field.py  list.py  list_field.py  simple.py
src/pyqt_settings/gui_widget/: base.py  path_line_edit.py  simple.py
src/pyqt_settings/tests/: setting_test.py
src/pyqt_settings/ui/: path_widget.ui  path_widget_ui.py
tests/: geometry_test.py  setting_test.py
