[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'pyqt-settings'
authors = [{ name = 'ostr00000' }]
version = '0.3.1'
description = "Descriptors for QSettings with GUI generating."

requires-python = '>=3.8'
dependencies = [
    'PyQt5',
    'boltons',
    'decorator',
]

[tool.setuptools.packages.find]
where = ['src']
exclude = ['*tests*']

[tool.setuptools.package-data]
'*' = ['*.svg', '*.jpg']
